CHANGES IN VERSION 2018.1 (First version working with SEER release of April 2018)
------------------------

NEW FEATURES

    o pickFields now sorts picks internally, so the user no longer needs to worry about pick ordering.

Notes
    
    o The documentation got some edits.


CHANGES IN VERSION 2017.3 (Third version working with SEER data of 2017)
------------------------

NEW FEATURES

    o desc field of getFields() is now var_label() in mkSEER() output (depends on R package labelled)
    o added sas names to output of getFields and pickField
    o shifted dependence from XLConnect to openxlsx to get rid of rJava dependence  
    o mapCODs  maps COD integer codes to strings in CODS     
    o p2s generates times between primary/first and second cancers, at the individual level     


Notes

    o Fixed riskVsAge() so it no longer depends on trt being "rad" and "noRad" 



CHANGES IN VERSION 2017.2 (Second version working with SEER data of 2017)
------------------------

NEW FEATURES

    o mkDemographics is a new function that generates median age and OS tables in an Excel file     

Notes

    o There is now an ASCII version of the SEER data with radiatn and chemo as rightmost columns, so please ignore
    my Notes below. I  assume users of SEERaBomb will get this "CUSTOM"  dataset by filling out the  data use
    agreement: radiatn and chemo are now default fields in pickFields.




CHANGES IN VERSION 2017.1 (First version working with SEER data of 2017)
------------------------

Notes

    o The field radiatn is no longer in the regular SEER release, so it has been removed from the pickFields default
    and mkSEER no longer calls mapTrts unless the field is there (if using data released in 2016). 
    While one can get the radiation data by signing an extra DUA, it is only available through 
    SEER*stat (one would have to export it from there) and SEER*stat only runs on Windows (and I'm on a mac). 